<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--忘记密码-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@+id/agreement_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.yzq.login.widget.PopupHeaderView
            android:id="@+id/popup_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/layout_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp">


            <com.yzq.login.widget.PopupTitleView
                android:id="@+id/popup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleEnd="@string/login_by_sms_code"
                app:titleStart="@string/login_by_pwd" />

            <!--手机号-->
            <com.yzq.login.widget.InputPhoneView
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                app:icon_padding="10dp"
                app:icon_size="34dp"
                app:icon_src="@drawable/ic_clear"
                app:icon_visibility="false"
                app:input_hint="@string/login_phone_input_hint" />


            <!--密码-->
            <com.yzq.login.widget.InputPwdView
                android:id="@+id/input_pwd"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                app:input_hint="@string/login_password_input_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_phone" />


            <!--登录按钮-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/center_bold_16"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_selector"
                android:enabled="false"
                android:text="@string/login"
                android:textColor="@color/white" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--隐私协议-->
    <com.yzq.login.widget.AgreementCheckboxView
        android:id="@+id/agreement_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:agreement_links="@array/agreement_links"
        app:agreement_text="@string/login_by_pwd_agreement"
        app:layout_constraintBottom_toTopOf="@+id/tv_forget_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:show_check="true" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/forget_pwd"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>