<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.yzq.login.widget.TitleBackView
        android:id="@+id/title_back_view"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:titleText="@string/complete_register_info" />


    <com.yzq.login.widget.InputPwdView
        android:id="@+id/input_pwd"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        app:input_hint="@string/login_password_input_hint" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_complete_register"
        style="@style/center_bold_16"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_selector"
        android:enabled="false"
        android:text="@string/complete_and_login"
        android:textColor="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>