<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popup_color">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.yzq.login.widget.PopupHeaderView
            android:id="@+id/popup_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/layout_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_close">

            <com.yzq.login.widget.PopupTitleView
                android:id="@+id/popup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleEnd="@string/login_by_pwd"
                app:titleStart="@string/login_by_sms_code" />


            <!--手机号-->
            <com.yzq.login.widget.InputPhoneView
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                app:icon_padding="10dp"
                app:icon_size="34dp"
                app:icon_src="@drawable/ic_clear"
                app:icon_visibility="false"
                app:input_hint="@string/login_phone_input_hint" />


            <!--验证码-->
            <com.yzq.login.widget.InputWithSmsView
                android:id="@+id/input_sms_code"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                app:input_hint="验证码"
                app:sms_button_text="@string/get_sms_code"
                app:sms_button_text_color="@color/secondary_text"
                app:sms_button_text_size="12dp" />


            <!--登录按钮-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/center_bold_16"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_selector"
                android:enabled="false"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/input_sms_code" />


            <!--隐私协议-->
            <com.yzq.login.widget.AgreementCheckboxView
                android:id="@+id/agreement_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                app:agreement_links="@array/agreement_links"
                app:agreement_text="@string/login_by_sms_code_agreement"
                app:show_check="true" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>