<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="24dp">


    <com.yzq.login.widget.AgreementCheckboxView
        android:id="@+id/agreement_checkbox_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:agreement_links="@array/agreement_links"
        app:agreement_text="@string/login_agreement_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/agreement_checkbox_view">

        <!--不同意按钮-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_disagree"
            style="@style/center_bold_16"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_negative_btn"
            android:text="@string/disagree"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent" />

        <!--同意按钮-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_agree"
            style="@style/center_bold_16"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_positive_btn"
            android:text="@string/agree"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_disagree" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>