<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.yzq.login.widget.PopupHeaderView
            android:id="@+id/popup_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/layout_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/pupup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complete_register_info" />


            <com.yzq.login.widget.InputPwdView
                android:id="@+id/input_pwd"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="36dp"
                app:input_hint="@string/login_password_input_hint" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_complete_register"
                style="@style/center_bold_16"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/btn_selector"
                android:enabled="false"
                android:text="@string/complete_and_login"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>